# transformer-structural-compression

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yml
scripts/: plot_training.py  predict.py  train_baseline.py
src/tsc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tsc/data/: goemotions.py
src/tsc/eval/: metrics.py
